# linera-name-system

./: .env.example  .gitignore  .vercelignore  README.md  next.config.ts  opencode.json  package.json  pnpm-lock.yaml
.opencode/command/: rename-context.md  sanitize-chat-context.md
chat-context/: 1.md  3.md  4.md  5.md  6.md  7.md  8.md
chat-context-ai/: 1.md  10-register-cross-chain-failed.md  11.md  12.md  13.md  14-fix-ui-state-update-after-set-price.md  15-buy-button-doesnt-transfer-domain-even-tho-purchase-succesful-in-the-ui.md  16-fixing-claimable-balance-doesnt-show-correctly.md  17-linera-claimable-balance-working.md  18-implement-paid-domain-registration-extension.md  19-implement-domain-checker-contract.md  2. Linera Name System Debug.md  20.md  21.md  22-docs.md  23-replace-dynamicwidget-with-connectbutton-wagmi.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
contracts/: Cargo.toml  README.md
contracts/domain_checker/: Cargo.toml
contracts/domain_checker/src/: contract.rs  lib.rs  service.rs  state.rs
contracts/domain_checker/tests/: single_chain.rs
contracts/linera_name_system/: Cargo.toml
contracts/linera_name_system/src/: contract.rs  lib.rs  service.rs  state.rs
contracts/src/: contract.rs  lib.rs  service.rs  state.rs
public/linera/: linera_web.d.ts  linera_web.js  linera_web_bg.wasm.d.ts
scripts/: build-contract.ts  contract-interact.ts  create-wallet.ts  deploy-contract.ts  fetch-akindo-submissions.ts  linera-cli.ts  wallet-balance.ts  wallet-init.ts  wallet-show.ts
src/app/: layout.tsx  page.tsx
src/components/: counter-app.tsx  (+5 more)
(+12 files in other folders)
