[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
linera-sdk = "0.15.6"
linera-views = "0.15.6"
async-graphql = { version = "7.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[[bin]]
name = "counter_contract"
path = "src/contract.rs"

[[bin]]
name = "counter_service"
path = "src/service.rs"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true
